--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/ground_color.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://addons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main_game.tscn", "res://scenes/trailer_scene.tscn")
-current_scene="res://scenes/trailer_scene.tscn"
+open_scenes=PackedStringArray("res://scenes/simple_scene.tscn")
+current_scene="res://scenes/simple_scene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -43,9 +43,9 @@ position=Vector2i(0, 69)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://scripts/ground_color.gd"]
+selected_script="res://scripts/ground_color.gd"
+open_help=["Sprite2D", "Sprite3D"]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
