--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "/home/albus/Documents/Mangroves/project.godot"
+    "godotTools.editorPath.godot4": "/snap/godot-4/current/Godot_v4.4-stable_mono_linux.x86_64"
 }
