<fix>:: all ground has the same color

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -15,7 +15,7 @@ project_settings=Rect2(360, 250, 1200, 700)
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0, 0.501961, 0, 1, 1, 0.501961, 0, 1, 1, 0.8, 0, 1, 1, 0.8, 0.6, 1, 0.996078, 0.427451, 0.305882, 1, 1, 0.580392, 0.388235, 1)
+recent_presets=PackedColorArray(0.314423, 0.335936, 0.146382, 1, 0.244796, 0.358843, 0.107247, 1, 0.243137, 0.92549, 0.105882, 1, 0.720464, 0.755561, 0.989287, 1, 0.721569, 0.756863, 0.988235, 1, 0.688652, 0.769578, 0.983151, 1, 1, 0.960784, 0.619608, 1, 1, 0.980392, 0.803922, 1, 0.780392, 0.262745, 0, 1)
 
 [script_setup]
 
@@ -30,3 +30,7 @@ StaticBody3D:scale=false
 [quick_open_dialog]
 
 last_mode=1
+
+[game_view]
+
+embed_size_mode=1
