--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-454
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,27 +32,27 @@ open_scenes=PackedStringArray("res://scenes/simple_scene.tscn")
 current_scene="res://scenes/simple_scene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 69)
+position=Vector2i(0, 132)
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/ground_color.gd"]
 selected_script="res://scripts/ground_color.gd"
-open_help=["Sprite2D", "Sprite3D"]
+open_help=[]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 251, 1164, 695)
+floating_window_rect=Rect2i(0, 132, 3072, 1788)
 floating_window_screen=0
 
 [ShaderEditor]
