--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,17 +9,17 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://demo/Demo.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://heightmaps/", "res://demo/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://models/CerroTorre.obj")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://models/", "res://addons/terrain_3d/", "res://addons/terrain_3d/tools/")
 dock_node_current_tab=0
-dock_history_include_scene=true
+dock_history_include_scene=false
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=310
+dock_hsplit_2=344
 dock_hsplit_3=-454
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/simple_scene.tscn", "res://demo/Demo.tscn")
-current_scene="res://demo/Demo.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://demo/Demo.tscn", "res://addons/terrain_3d/tools/importer.tscn", "res://scenes/simple_scene.tscn")
+current_scene="res://scenes/simple_scene.tscn"
+center_split_offset=-356
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=17
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -43,10 +43,10 @@ position=Vector2i(0, 132)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/ground_color.gd"]
-selected_script="res://scripts/ground_color.gd"
+open_scripts=["res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd", "res://demo/src/UI.gd"]
+selected_script="res://scenes/terrain_3d.gd"
 open_help=[]
-script_split_offset=200
+script_split_offset=302
 list_split_offset=0
 zoom_factor=1.0
 
