<fix>:: the obj of the mountain is now decent

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://models/CerroTorre.obj")
+dock_filesystem_selected_paths=PackedStringArray("res://models/mountain_histogram_40x40_godot.obj")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://models/", "res://addons/terrain_3d/", "res://addons/terrain_3d/tools/")
 dock_node_current_tab=0
 dock_history_include_scene=false
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://demo/Demo.tscn", "res://addons/terrain_3d/tools/importer.tscn", "res://scenes/simple_scene.tscn")
-current_scene="res://scenes/simple_scene.tscn"
+open_scenes=PackedStringArray("res://addons/terrain_3d/tools/importer.tscn", "res://scenes/1-Intro_scene.tscn")
+current_scene="res://scenes/1-Intro_scene.tscn"
 center_split_offset=-356
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -43,8 +43,8 @@ position=Vector2i(0, 132)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd", "res://demo/src/UI.gd"]
-selected_script="res://scenes/terrain_3d.gd"
+open_scripts=["res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd"]
+selected_script="res://scripts/environment_setup.gd"
 open_help=[]
 script_split_offset=302
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 132, 3072, 1788)
+floating_window_rect=Rect2i(1684, 1088, 1324, 742)
 floating_window_screen=0
 
 [ShaderEditor]
