--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -16,20 +16,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://demo/src/UI.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-"scroll_position": 3.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://addons/terrain_3d/tools/importer.gd]
 
 state={
@@ -53,6 +39,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/environment_setup.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
