<added>:: zeppelin in scene 1

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://models/mountain_histogram_40x40_godot.obj")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://models/", "res://addons/terrain_3d/", "res://addons/terrain_3d/tools/")
+dock_filesystem_selected_paths=PackedStringArray("res://models/Zeppelin/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://models/", "res://models/Zeppelin/", "res://addons/terrain_3d/", "res://addons/terrain_3d/tools/")
 dock_node_current_tab=0
 dock_history_include_scene=false
 dock_history_include_global=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://addons/terrain_3d/tools/importer.tscn", "res://scenes/1-Intro_scene.tscn")
+open_scenes=PackedStringArray("res://scenes/1-Intro_scene.tscn")
 current_scene="res://scenes/1-Intro_scene.tscn"
 center_split_offset=-356
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=17
 
 [EditorWindow]
 
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 132, 3072, 1788)
+floating_window_rect=Rect2i(948, 582, 1324, 742)
 floating_window_screen=0
 
 [ShaderEditor]
