--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://models/Zeppelin/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/zeppelin.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://models/", "res://models/Zeppelin/", "res://addons/terrain_3d/", "res://addons/terrain_3d/tools/")
 dock_node_current_tab=0
 dock_history_include_scene=false
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=344
-dock_hsplit_3=-454
+dock_hsplit_3=-300
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -33,7 +33,7 @@ current_scene="res://scenes/1-Intro_scene.tscn"
 center_split_offset=-356
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=17
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 132)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd"]
-selected_script="res://scripts/environment_setup.gd"
+open_scripts=["res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd", "res://scripts/zeppelin.gd", "res://scenes/zeppelin.gd"]
+selected_script="res://scenes/zeppelin.gd"
 open_help=[]
 script_split_offset=302
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(948, 582, 1324, 742)
+floating_window_rect=Rect2i(0, 132, 3072, 1788)
 floating_window_screen=0
 
 [ShaderEditor]
