--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -33,7 +33,7 @@ current_scene="res://scenes/1-Intro_scene.tscn"
 center_split_offset=-356
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 132)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd", "res://scripts/zeppelin.gd", "res://scenes/zeppelin.gd"]
-selected_script="res://scenes/zeppelin.gd"
+open_scripts=["res://auto_play_animation.gd", "res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd", "res://scripts/zeppelin.gd", "res://scenes/zeppelin.gd"]
+selected_script="res://auto_play_animation.gd"
 open_help=[]
 script_split_offset=302
 list_split_offset=0
