--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/zeppelin.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://models/", "res://models/Zeppelin/", "res://addons/terrain_3d/", "res://addons/terrain_3d/tools/")
 dock_node_current_tab=0
 dock_history_include_scene=false
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=170
+dock_split_2=308
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=241
-dock_hsplit_3=-473
+dock_hsplit_3=-329
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/1-Intro_scene.tscn")
 current_scene="res://scenes/1-Intro_scene.tscn"
 center_split_offset=-356
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 selected_bottom_panel_item=4
 
@@ -43,10 +43,10 @@ position=Vector2i(0, 132)
 
 [ScriptEditor]
 
-open_scripts=["res://auto_play_animation.gd", "res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd", "res://scripts/zeppelin.gd", "res://scenes/zeppelin.gd"]
-selected_script="res://auto_play_animation.gd"
+open_scripts=["res://scripts/animation_controller.gd", "res://auto_play_animation.gd", "res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd"]
+selected_script="res://scripts/animation_controller.gd"
 open_help=[]
-script_split_offset=302
+script_split_offset=323
 list_split_offset=0
 zoom_factor=1.0
 
@@ -61,3 +61,13 @@ open_shaders=[]
 split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=false
+log_filter_2=false
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
