Separate branch for Scene 1

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -33,7 +33,7 @@ current_scene="res://scenes/1-Intro_scene.tscn"
 center_split_offset=-356
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 132)
 [ScriptEditor]
 
 open_scripts=["res://scripts/animation_controller.gd", "res://auto_play_animation.gd", "res://scripts/environment_setup.gd", "res://scripts/ground_color.gd", "res://addons/terrain_3d/tools/importer.gd", "res://scenes/terrain_3d.gd"]
-selected_script="res://scripts/animation_controller.gd"
+selected_script="res://auto_play_animation.gd"
 open_help=[]
 script_split_offset=323
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(948, 582, 1324, 742)
+floating_window_rect=Rect2i(0, 132, 3072, 1788)
 floating_window_screen=0
 
 [ShaderEditor]
