Update .gitignore to exclude large video files

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ notebooks/histogram_part_1.obj
 notebooks/test.obj
 scenes/scene2/histogram_split.obj
 scenes/scene2/models/histogram_godot.obj
+scenes/scene2/output_video.avi
