Update .gitignore to exclude large video files

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ notebooks/test.obj
 scenes/scene2/histogram_split.obj
 scenes/scene2/models/histogram_godot.obj
 scenes/scene2/output_video.avi
+scenes/scene2/output_video.avi
